--- a/bana.html
+++ b/bana.html
@@ -13,8 +13,8 @@
         <img src="images/20241018_121542.jpg" alt="BanaMath" class="title-image">
         
        
-        <a href="new player.html" class="button new-game">New Game</a>
-        <a href="continue.html" class="button continue">Continue</a>
+        <a href="new player.php" class="button new-game">New Game</a>
+        <a href="continue.php" class="button continue">Continue</a>
 
         <button class="button score-board">Top Score Board</button>
     </div>
